--- a/pom.xml
+++ b/pom.xml
@@ -1,38 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.lnt</groupId>
-    <artifactId>lt-connect</artifactId>
+    <artifactId>l-t-connect</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>L-T Connect</name>
-    <description>L&T Connect Application - CI/CD Demo</description>
+    <name>L&amp;T Connect</name>
+    <description>L&amp;T Connect - Maintenance Management System</description>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <junit.version>5.10.1</junit.version>
     </properties>
 
     <dependencies>
-        <!-- JUnit for testing -->
+        <!-- JUnit 5 for testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.10.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <!-- Selenium for automation -->
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>4.16.1</version>
         </dependency>
     </dependencies>
 
@@ -49,29 +43,11 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Surefire Plugin for tests -->
+            <!-- Maven Surefire Plugin for running tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.3</version>
-            </plugin>
-
-            <!-- Checkstyle for code quality -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.3.1</version>
-                <configuration>
-                    <configLocation>google_checks.xml</configLocation>
-                    <failOnViolation>false</failOnViolation>
-                </configuration>
-            </plugin>
-
-            <!-- PMD for bug detection -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.21.2</version>
             </plugin>
         </plugins>
     </build>
