--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -26,7 +26,7 @@ jobs:
       uses: github/codeql-action/init@v4
       with:
         languages: javascript-typescript
-        queries: +security-extended,security-and-quality
+        queries: +security-extended,+security-and-quality
 
     # Next.js does not require build for CodeQL
     - name: Perform CodeQL Analysis
